--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         theme: {
           extend: {
             colors: {
-              clifford: "#da373d",
+              colBlack: "#111",
+              colPink: "#E527B2",
             },
           },
         },
@@ -35,19 +36,27 @@
     <!-- banner  -->
     <section>
       <div class="hero min-h-screen bg-[#F9F6E2]">
-        <div class="hero-content flex-col lg:flex-row-reverse">
+        <div class="hero-content flex-col text-center lg:flex-row-reverse">
           <img
             src="/images/Summer 1.png"
-            class="max-w-xl rounded-lg shadow-2xl"
+            class="max-w-lg rounded-lg shadow-2xl"
           />
           <div>
-            <h1 class="text-5xl font-bold">Box Office News!</h1>
-            <p class="py-6">
-              Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda
-              excepturi exercitationem quasi. In deleniti eaque aut repudiandae
-              et a id nisi.
+            <h4 class="text-colBlack text-3xl font-medium mb-11">
+              ---SALE FEVER---
+            </h4>
+            <h1 class="text-colBlack text-6xl font-bold mb-20">
+              Purchase TK 200 or above & get
+              <span class="text-colPink">20% off</span>
+            </h1>
+            <p class="inline text-2xl text-colBlack font-medium">
+              Use promo code
             </p>
-            <button class="btn btn-primary">Get Started</button>
+            <button
+              class="btn bg-colPink text-white text-2xl hover:bg-pink-400"
+            >
+              SELL200
+            </button>
           </div>
         </div>
       </div>
