--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             colors: {
               colBlack: "#111",
               colPink: "#E527B2",
+              colGrey: "#1111110d",
             },
           },
         },
@@ -62,5 +63,92 @@
       </div>
     </section>
     <!-- cart & cards  -->
+    <section class="mt-28 ml-5">
+      <h1 class="text-colBlack text-4xl font-semibold mb-8">Kitchenware</h1>
+      <div class="flex">
+        <!-- products container 1 -->
+        <div class="flex-1">
+          <div class="grid grid-cols-1 gap-3 lg:grid-cols-3">
+            <!-- item1 -->
+            <div id="item-1" class="card bg-base-100 shadow-xl">
+              <figure class="items-center px-10 pt-10 bg-colGrey">
+                <img
+                  src="/images/prod1.png"
+                  alt="Spoons-Set"
+                  class="rounded-xl w-32"
+                />
+              </figure>
+              <div class="card-body items-center text-center">
+                <div class="flex">
+                  <img src="images/Full.svg" alt="" />
+                  <img src="images/Full.svg" alt="" />
+                  <img src="images/Full.svg" alt="" />
+                  <img src="images/null.svg" alt="" />
+                  <img src="images/null.svg" alt="" />
+                </div>
+                <h2 class="text-xl font-semibold text-colBlack">Spoons Set</h2>
+                <p>39.00TK</p>
+              </div>
+            </div>
+            <!-- item2 -->
+            <div id="item-2" class="card bg-base-100 shadow-xl">
+              <figure class="items-center px-10 pt-10 bg-colGrey">
+                <img
+                  src="/images/prod2.png"
+                  alt="Cutting-Board-Set"
+                  class="rounded-xl w-40"
+                />
+              </figure>
+              <div class="card-body items-center text-center">
+                <div class="flex">
+                  <img src="images/null.svg" alt="" />
+                  <img src="images/null.svg" alt="" />
+                  <img src="images/null.svg" alt="" />
+                  <img src="images/null.svg" alt="" />
+                  <img src="images/null.svg" alt="" />
+                </div>
+                <h2 class="text-xl font-semibold text-colBlack">
+                  Cutting Board Set
+                </h2>
+                <p>25.00TK</p>
+              </div>
+            </div>
+            <!-- item3 -->
+            <div id="item-2" class="card bg-base-100 shadow-xl">
+              <figure class="items-center px-10 pt-10 bg-colGrey">
+                <img
+                  src="/images/prod3.png"
+                  alt="Non-stick Cookware "
+                  class="rounded-xl w-36"
+                />
+              </figure>
+              <div class="card-body items-center text-center">
+                <div class="flex">
+                  <img src="images/null.svg" alt="" />
+                  <img src="images/null.svg" alt="" />
+                  <img src="images/null.svg" alt="" />
+                  <img src="images/null.svg" alt="" />
+                  <img src="images/null.svg" alt="" />
+                </div>
+                <h2 class="text-xl font-semibold text-colBlack">
+                  Non-stick Cookware
+                </h2>
+                <p>49.00TK</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- cart container  -->
+        </div>
+        <div>
+          <div class="mx-2">
+            <h3 class="text-2xl font-medium text-colBlack">Have a coupon?</h3>
+            <input type="text" placeholder="Coupon Code" />
+            <button class="btn bg-colPink text-white">Apply</button>
+          </div>
+          <div></div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
