--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
               colBlack: "#111",
               colPink: "#E527B2",
               colGrey: "#1111110d",
+              colDGrey: "#11111180",
             },
           },
         },
@@ -39,7 +40,7 @@
       <div class="hero min-h-screen bg-[#F9F6E2]">
         <div class="hero-content flex-col text-center lg:flex-row-reverse">
           <img
-            src="/images/Summer 1.png"
+            src="images/Summer 1.png"
             class="max-w-lg rounded-lg shadow-2xl"
           />
           <div>
@@ -63,49 +64,93 @@
       </div>
     </section>
     <!-- cart & cards  -->
-    <section class="mt-28 ml-5">
-      <h1 class="text-colBlack text-4xl font-semibold mb-8">Kitchenware</h1>
-      <div class="flex">
-        <!-- products container 1 -->
+    <section class="mt-28 ml-5 flex bg-[#F8F8F8]">
+      <div>
+        <!-- kitchenware container  -->
+        <h1 class="text-colBlack text-4xl font-semibold mb-8">Kitchenware</h1>
         <div class="flex-1">
           <div class="grid grid-cols-1 gap-3 lg:grid-cols-3">
             <!-- item1 -->
-            <div id="item-1" class="card bg-base-100 shadow-xl">
+            <div id="" class="card bg-base-100 shadow-xl">
               <figure class="items-center px-10 pt-10 bg-colGrey">
                 <img
-                  src="/images/prod1.png"
+                  src="images/prod1.png"
                   alt="Spoons-Set"
                   class="rounded-xl w-32"
                 />
               </figure>
               <div class="card-body items-center text-center">
-                <div class="flex">
-                  <img src="images/Full.svg" alt="" />
-                  <img src="images/Full.svg" alt="" />
-                  <img src="images/Full.svg" alt="" />
-                  <img src="images/null.svg" alt="" />
-                  <img src="images/null.svg" alt="" />
+                <!-- RATING -->
+                <div class="rating rating-md">
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                    checked
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
                 </div>
                 <h2 class="text-xl font-semibold text-colBlack">Spoons Set</h2>
                 <p>39.00TK</p>
               </div>
             </div>
             <!-- item2 -->
-            <div id="item-2" class="card bg-base-100 shadow-xl">
+            <div id="" class="card bg-base-100 shadow-xl">
               <figure class="items-center px-10 pt-10 bg-colGrey">
                 <img
-                  src="/images/prod2.png"
+                  src="images/prod2.png"
                   alt="Cutting-Board-Set"
                   class="rounded-xl w-40"
                 />
               </figure>
               <div class="card-body items-center text-center">
-                <div class="flex">
-                  <img src="images/null.svg" alt="" />
-                  <img src="images/null.svg" alt="" />
-                  <img src="images/null.svg" alt="" />
-                  <img src="images/null.svg" alt="" />
-                  <img src="images/null.svg" alt="" />
+                <!-- RATING -->
+                <div class="rating rating-md">
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                    checked
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
                 </div>
                 <h2 class="text-xl font-semibold text-colBlack">
                   Cutting Board Set
@@ -114,21 +159,43 @@
               </div>
             </div>
             <!-- item3 -->
-            <div id="item-2" class="card bg-base-100 shadow-xl">
+            <div id="" class="card bg-base-100 shadow-xl">
               <figure class="items-center px-10 pt-10 bg-colGrey">
                 <img
-                  src="/images/prod3.png"
+                  src="images/prod3.png"
                   alt="Non-stick Cookware "
                   class="rounded-xl w-36"
                 />
               </figure>
               <div class="card-body items-center text-center">
-                <div class="flex">
-                  <img src="images/null.svg" alt="" />
-                  <img src="images/null.svg" alt="" />
-                  <img src="images/null.svg" alt="" />
-                  <img src="images/null.svg" alt="" />
-                  <img src="images/null.svg" alt="" />
+                <!-- RATING -->
+                <div class="rating rating-md">
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                    checked
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
                 </div>
                 <h2 class="text-xl font-semibold text-colBlack">
                   Non-stick Cookware
@@ -140,15 +207,203 @@
 
           <!-- cart container  -->
         </div>
+        <!-- Furniture container  -->
+        <h1 class="text-colBlack text-4xl font-semibold mb-8 mt-14">
+          Furniture
+        </h1>
+        <div class="flex-1">
+          <div class="grid grid-cols-1 gap-3 lg:grid-cols-3">
+            <!-- item1 -->
+            <div id="" class="card bg-base-100 shadow-xl">
+              <figure class="items-center px-10 pt-10 bg-colGrey">
+                <img
+                  src="images/prod7.png"
+                  alt="Single relax chair"
+                  class="rounded-xl w-32"
+                />
+              </figure>
+              <div class="card-body items-center text-center">
+                <!-- RATING -->
+                <div class="rating rating-md">
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                    checked
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                </div>
+                <h2 class="text-xl font-semibold text-colBlack">
+                  Single Relax Chair
+                </h2>
+                <p>185.00TK</p>
+              </div>
+            </div>
+            <!-- item2 -->
+            <div id="" class="card bg-base-100 shadow-xl">
+              <figure class="items-center px-10 pt-10 bg-colGrey">
+                <img
+                  src="images/prod8.png"
+                  alt="Children play"
+                  class="rounded-xl w-32"
+                />
+              </figure>
+              <div class="card-body items-center text-center">
+                <!-- RATING -->
+                <div class="rating rating-md">
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                    checked
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                </div>
+                <h2 class="text-xl font-semibold text-colBlack">
+                  Children play
+                </h2>
+                <p>299.00TK</p>
+              </div>
+            </div>
+            <!-- item3 -->
+            <div id="" class="card bg-base-100 shadow-xl">
+              <figure class="items-center px-10 pt-10 bg-colGrey">
+                <img
+                  src="images/prod9.png"
+                  alt="Flexible Sofa "
+                  class="rounded-xl w-36"
+                />
+              </figure>
+              <div class="card-body items-center text-center">
+                <!-- RATING -->
+                <div class="rating rating-md">
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                    checked
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                  <input
+                    type="radio"
+                    name="rating-7"
+                    class="mask mask-star-2 bg-orange-400"
+                  />
+                </div>
+                <h2 class="text-xl font-semibold text-colBlack">
+                  Flexible Sofa
+                </h2>
+                <p>339.00TK</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- cart container  -->
+        </div>
+      </div>
+      <div>
         <div>
-          <div class="mx-2">
+          <!-- coupon div  -->
+          <div class="mx-2 my-5 bg-[#FFF] p-6">
             <h3 class="text-2xl font-medium text-colBlack">Have a coupon?</h3>
-            <input type="text" placeholder="Coupon Code" />
-            <button class="btn bg-colPink text-white">Apply</button>
+            <div class="join">
+              <input
+                id="coupon-code"
+                class="input input-bordered join-item"
+                placeholder="Coupon Code"
+              />
+              <button
+                onclick="couponBtn()"
+                class="btn join-item bg-colPink text-white rounded-lg"
+              >
+                Apply
+              </button>
+            </div>
           </div>
           <div></div>
         </div>
+        <div class="mx-2 my-5 bg-[#FFF] p-6 text-colBlack font-medium text-2xl">
+          <p id="cart"></p>
+          <hr />
+          <p>Total price:</p>
+          <p>Discount :</p>
+          <p>Total:</p>
+          <hr class="mb-3" />
+          <!-- Open the modal using ID.showModal() method -->
+          <button
+            class="btn bg-colPink text-white text-xl font-semibold"
+            onclick="my_modal_5.showModal()"
+          >
+            Make Purchase
+          </button>
+          <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+            <form method="dialog" class="modal-box text-center">
+              <img src="images/congo.png" />
+              <h3 class="text-5xl font-bold text-colBlack">Congratulations</h3>
+              <p class="py-4 text-colDGrey text-xl font-normal">
+                Your Purchase the product
+              </p>
+              <div class="modal-action">
+                <!-- if there is a button in form, it will close the modal -->
+                <button class="btn text-white bg-colPink">Go Home</button>
+              </div>
+            </form>
+          </dialog>
+        </div>
       </div>
     </section>
+    <script src="index.js"></script>
   </body>
 </html>
