added total part

--- a/index.html
+++ b/index.html
@@ -402,8 +402,8 @@
           <ul id="cart"></ul>
           <hr />
           <p>Total price: <span id="totalProductPrice">00</span></p>
-          <p>Discount: <span id="discount"></span></p>
-          <p>Total: <span id="total"></span></p>
+          <p>Discount: <span id="discount">00</span></p>
+          <p>Total: <span id="total">00</span></p>
           <hr class="mb-3" />
           <!-- Open the modal using ID.showModal() method -->
           <button
